# ecommerce-test-run

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/css/: main-old.css  main.css  main.css.map  main.scss
templates/: base.html  index.html  login.html  success.html
